# read-no-evil-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DETECTION_MATRIX.md  Dockerfile  ISSUE-84.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  detection_payload.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  update-detection-matrix.yml
scripts/: generate_detection_matrix.py
src/read_no_evil_mcp/: __init__.py  __main__.py  cli.py  config.py  defaults.py  exceptions.py  mailbox.py  models.py  server.py  service.py  version_check.py
src/read_no_evil_mcp/accounts/: __init__.py  _validators.py  config.py  permissions.py  service.py
src/read_no_evil_mcp/accounts/credentials/: __init__.py  base.py  env.py
src/read_no_evil_mcp/connectors/: __init__.py  base.py  imap.py
src/read_no_evil_mcp/daemon/: __init__.py  client.py  paths.py  process.py  server.py
src/read_no_evil_mcp/email/: __init__.py  models.py  service.py
src/read_no_evil_mcp/email/connectors/: __init__.py  base.py  config.py  gmail.py  imap.py  smtp.py
src/read_no_evil_mcp/filtering/: __init__.py  access_rules.py
src/read_no_evil_mcp/protection/: __init__.py  heuristic.py  layer.py  models.py  service.py
src/read_no_evil_mcp/tools/: __init__.py  _app.py  _error_handler.py  _service.py  _update_notice.py  base.py  delete_email.py  get_email.py  list_accounts.py  list_emails.py  list_folders.py  mark_spam.py  models.py  move_email.py  registry.py  send_email.py
tests/: __init__.py  test_config.py  test_mailbox.py  test_models.py  test_server.py  test_service.py  test_version_check.py
tests/accounts/: __init__.py  test_config.py  test_permissions.py  test_service.py
tests/accounts/credentials/: __init__.py  test_env.py
tests/connectors/: test_imap.py
tests/email/: __init__.py  test_models.py  test_service.py
tests/email/connectors/: __init__.py  test_gmail.py  test_imap.py  test_smtp.py
tests/filtering/: __init__.py  test_access_rules.py
tests/integration/: __init__.py
tests/integration/prompt_injection/: __init__.py  conftest.py  results.json  test_detection.py
tests/integration/prompt_injection/payloads/: README.md  baseline.yaml  character.yaml  email_specific.yaml  encoding.yaml  invisible.yaml  semantic.yaml  structural.yaml
tests/protection/: __init__.py  test_heuristic.py  test_layer.py  test_models.py  test_service.py
tests/tools/: test_delete_email.py  test_error_handler.py  test_get_email.py  test_list_accounts.py  test_list_emails.py  test_list_folders.py  test_mark_spam.py  test_move_email.py  test_send_email.py  test_update_notice.py
